add a bit of i2c

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
         "flag.h": "c",
         "stdarg.h": "c",
         "gpio_reg.h": "c",
-        "return.h": "c"
+        "return.h": "c",
+        "cmath": "c",
+        "complex": "c"
     }
 }
