--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,8 @@
-idf_component_register(
-    SRCS 
-        "do-an-02.c"
-        "../driver/spi/*.c"
-        "../driver/i2c*.c"
-        
-    INCLUDE_DIRS 
-        "."
-        "../helper"
-        "../driver/spi"
-        "../driver/i2c"
+idf_component_register(SRCS "do-an-02.c"
+                    INCLUDE_DIRS ".")
+
+target_include_directories(${COMPONENT_TARGET}
+    PUBLIC
+        ../config
+        ../helper
 )
