add full I2C, test mode for sender device

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,10 @@
         "chrono": "c",
         "text_encoding": "c",
         "typeindex": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "limits": "cpp",
+        "i2clog.h": "c",
+        "gpio_struct.h": "c",
+        "generalconfig.h": "c"
     }
 }
