add full I2C, OLED128x64, fix some bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,34 @@
         "limits": "cpp",
         "i2clog.h": "c",
         "gpio_struct.h": "c",
-        "generalconfig.h": "c"
+        "generalconfig.h": "c",
+        "random": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "flat_map": "cpp",
+        "flat_set": "cpp",
+        "format": "cpp",
+        "generator": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "oled128x64commands.h": "c",
+        "oled128x64definitions.h": "c",
+        "oled128x64.h": "c",
+        "gpio.h": "c",
+        "sdkconfig.h": "c",
+        "esp_intr_alloc.h": "c",
+        "esp_log.h": "c",
+        "i2chelper.h": "c"
     }
 }
