--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,13 @@ cmake_minimum_required(VERSION 3.22)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-# Tell CMake to look for additional components in the 'driver',  directory
-set(EXTRA_COMPONENT_DIRS driver)
+# Tell CMake to look for additional components in the 'comDriver',  directory
+set(EXTRA_COMPONENT_DIRS
+    # "helper"
+    "comDriver/i2c"
+    "comDriver/oled128x64"
+    "comDriver/spi"
+)
 
 # Define the project name
 project(do-an-02)
