add demo osc + show not available mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
         "freeserifbolditalic12pt7b.h": "c",
         "freeserifbolditalic9pt7b.h": "c",
         "freeserifbolditalic18pt7b.h": "c",
-        "freeserifbolditalic24pt7b.h": "c"
+        "freeserifbolditalic24pt7b.h": "c",
+        "string.h": "c"
     }
 }
