--- a/AppFonts/CMakeLists.txt
+++ b/AppFonts/CMakeLists.txt
@@ -1,4 +1,7 @@
 idf_component_register(
-    SRCS "AppFont.c"
-    INCLUDE_DIRS "." "./localFonts"
+    SRCS 
+        "AppFont.c"
+    INCLUDE_DIRS 
+        "." 
+        "./localFonts"
 )
