--- a/AppUtils/CMakeLists.txt
+++ b/AppUtils/CMakeLists.txt
@@ -1,4 +1,6 @@
 idf_component_register(
-    SRCS            "AppUtils.c"
-    INCLUDE_DIRS    "."
+    SRCS
+        "AppUtils.c"
+    INCLUDE_DIRS
+        "."
 )
