--- a/AppESPWrap/CMakeLists.txt
+++ b/AppESPWrap/CMakeLists.txt
@@ -3,4 +3,6 @@ idf_component_register(
         "AppESPWrap.c"
     INCLUDE_DIRS
         "."
+    REQUIRES 
+        esp_driver_gpio esp_driver_spi esp_timer
 )
