--- a/Main/CMakeLists.txt
+++ b/Main/CMakeLists.txt
@@ -1,11 +1,19 @@
 idf_component_register(
-    SRCS "Application.c"
-    INCLUDE_DIRS "."
+    SRCS 
+        "Application.c"
+    INCLUDE_DIRS 
+        "."
+    REQUIRES 
+        esp_driver_gpio esp_driver_spi esp_timer 
+        
 )
 
 target_include_directories(${COMPONENT_TARGET}
     PUBLIC
-        ../AppConfig
-        ../AppComponents
-        ../AppUtils
+    ../AppCore
+    # ../AppComponents
+    ../AppESPWrap
+    ../AppFonts
+    ../AppUtils
+    ../AppConfig
 )
